# ai_coding_demo

.github/workflows/: test-ci.yml
banksys/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
banksys/.github/workflows/: ci.yml
banksys/src/: __init__.py
banksys/src/backend/: __init__.py  app.py  streamlit_app.py
banksys/src/core/: __init__.py  config.py  models.py
banksys/src/utils/: __init__.py
banksys/tests/: test_api.py  test_core.py  test_utils.py
flask-hello-world/: .gitignore  app.py  pyproject.toml
